doc: add basic auth to swagger
