# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/admin/deductions/k-receipt": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Admin set k-receipt deduction",
                 "consumes": [
                     "application/json"
@@ -46,6 +51,12 @@
                             "$ref": "#/definitions/admin.Err"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/admin.Err"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -57,6 +68,11 @@
         },
         "/admin/deductions/personal": {
             "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Admin set personal deduction",
                 "consumes": [
                     "application/json"
@@ -88,6 +104,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/admin.Err"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/admin.Err"
                         }
@@ -262,6 +284,11 @@
                     "type": "number"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
